:)
- User it tests
- Better code due to sonarqube